# hlimds

./: .clang-tidy  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.base  Dockerfile.dev  Dockerfile.local  README.md  build.sh  commands  config.json  dbgen-run.sh  debug-build.sh  filter-tests.sh  filter_tests.sh  languages.yml  lcov.sh  rebuild.sh  run-tests.sh  smoke-tests.sh  test.tcl  tool-run.sh  update-image.sh  utopia.sh
lib/: CMakeLists.txt
lib/easyloggingpp/: CMakeLists.txt
lib/lorina/: CMakeLists.txt
lib/lorina/include/: CMakeLists.txt
lib/minisat/: CMakeLists.txt
src/diag/: CMakeLists.txt  diagnostics.cpp  diagnostics.h  logger.h  processor.cpp  processor.h  terminal_printer.cpp  terminal_printer.h
src/gate/: CMakeLists.txt  README.md
src/gate/analyzer/: probabilistic_estimate.cpp  probabilistic_estimate.h  simulation_estimator.cpp  simulation_estimator.h  switching_activity.cpp  switching_activity.h
src/gate/checker/: checker.cpp  checker.h
src/gate/criterion/: constraints.h  cost_function.cpp  cost_function.h  cost_vector.cpp  cost_vector.h  criterion.h  penalty_function.h  solution_space.h
src/gate/cut_based_tech_mapper/: replacement_struct.h  tech_map.h
src/gate/debugger/: base_checker.cpp  base_checker.h  bdd_checker.cpp  bdd_checker.h  checker.cpp  checker.h  context.h  encoder.cpp  encoder.h  fraig_checker.cpp  fraig_checker.h  k_checker.cpp  k_checker.h  miter.cpp  miter.h  rnd_checker.cpp  rnd_checker.h  sat_checker.cpp  sat_checker.h  seq_checker.cpp  seq_checker.h  verifier.cpp  verifier.h
src/gate/debugger2/: base_checker2.cpp  base_checker2.h  bdd_checker2.cpp  bdd_checker2.h  fraig_checker2.cpp  fraig_checker2.h  miter2.cpp  miter2.h  rnd_checker2.cpp  rnd_checker2.h  sat_checker2.h  seq_checker.cpp  seq_checker.h
src/gate/encoder/: context.h  encoder.cpp  encoder.h
src/gate/estimator/: cost_estimator.cpp  cost_estimator.h  estimator.h  npn_estimator.cpp  npn_estimator.h  ppa_estimator.h  probabilistic_estimate.cpp  probabilistic_estimate.h  simple_time_model.cpp  simple_time_model.h  simulation_estimator.cpp  simulation_estimator.h  switching_activity.cpp  switching_activity.h
src/gate/fir_to_model2/: fir_to_model2.cpp  fir_to_model2.h  fir_to_model2_wrapper.cpp  fir_to_model2_wrapper.h
src/gate/function/: bdd.h  truth_table.h
src/gate/model/: array.h  bdd.h  cell.cpp  cell.h  cellattr.cpp  cellattr.h  celltype.cpp  celltype.h  celltype_gates.inc  design.cpp  design.h  gate.cpp  gate.h  gnet.cpp  gnet.h  gsymbol.cpp  gsymbol.h  hMetis_formatter.cpp  hMetis_formatter.h  iomapping.h  link.cpp  link.h  list.h  memory.h  net.cpp  net.h  netlist.cpp  netlist.h  object.h  serializer.cpp  serializer.h  signal.cpp  signal.h  storage.h  string.h  subnet.cpp  subnet.h  subnet_base.h  subnetview.cpp  subnetview.h  (+4 more)
src/gate/model2/: array.h  cell.cpp  cell.h  cellattr.h  celltype.cpp  celltype.h  design.cpp  design.h  link.cpp  link.h  list.h  memory.h  net.cpp  net.h  object.h  storage.h  string.h  subnet.cpp  subnet.h
src/gate/mutator/: mutator.cpp  mutator.h  mutator_transformer.cpp  mutator_transformer.h
src/gate/optimizer/: area_optimizer.h  area_replacer.h  area_resynthesizer.cpp  area_resynthesizer.h  area_subnet_iterator.h  associative_balancer.cpp  associative_balancer.h  balancer.cpp  balancer.h  bgnet.h  check_cut.cpp  check_cut.h  cone_builder.cpp  cone_builder.h  cone_visitor.cpp  cone_visitor.h  conflict_graph.cpp  conflict_graph.h  cut.cpp  cut.h  cut_extractor.cpp  cut_extractor.h  cut_storage.h  cut_visitor.h  cut_walker.cpp  cut_walker.h  cuts_finder_visitor.cpp  cuts_finder_visitor.h  depth_find_visitor.cpp  depth_find_visitor.h  depth_optimizer.h  depth_replacer.cpp  depth_replacer.h  depth_resynthesizer.h  depth_subnet_iterator.cpp  depth_subnet_iterator.h  design_transformer.h  get_dbstat.cpp  get_dbstat.h  lazy_refactorer.cpp  (+68 more)
src/gate/optimizer2/: area_optimizer.h  area_replacer.h  area_resynthesizer.cpp  area_resynthesizer.h  area_subnet_iterator.cpp  area_subnet_iterator.h  cone_builder.cpp  cone_builder.h  cut_extractor.cpp  cut_extractor.h  depth_optimizer.h  depth_replacer.cpp  depth_replacer.h  depth_resynthesizer.h  depth_subnet_iterator.cpp  depth_subnet_iterator.h  mffc.cpp  mffc.h  npn.cpp  npn.h  npndb.cpp  npndb.h  optimizer.h  pass.h  reconvergence_cut.cpp  reconvergence_cut.h  replacer.h  resubstitutor.cpp  resubstitutor.h  resynthesizer.h  rewriter.cpp  rewriter.h  rwdatabase.h  safe_passer.cpp  safe_passer.h  subnet_iterator.h  subnet_transformer.h  synthesizer.h  transformer.h
src/gate/parser/: gate_verilog.cpp  gate_verilog_parser.cpp  gate_verilog_parser.h  graphml.cpp  graphml.h  graphml_parser.cpp  graphml_parser.h  graphml_to_subnet.cpp  graphml_to_subnet.h  reader_gate.h
src/gate/premapper/: aigmapper.cpp  aigmapper.h  cell_aigmapper.cpp  cell_aigmapper.h  cell_migmapper.cpp  cell_migmapper.h  cell_premapper.cpp  cell_premapper.h  cell_xagmapper.cpp  cell_xagmapper.h  cell_xmgmapper.cpp  cell_xmgmapper.h  cone_premapper.cpp  cone_premapper.h  migmapper.cpp  migmapper.h  premapper.cpp  premapper.h  xagmapper.cpp  xagmapper.h  xmgmapper.h
src/gate/premapper2/: aigmapper.cpp  aigmapper.h
src/gate/printer/: dot.cpp  dot.h  gate_verilog.cpp  graphml.cpp  graphml.h  hMetisPrinter.cpp  hmetis_printer.cpp  vcd.cpp  vcd.h
src/gate/simulator/: simulator.cpp  simulator.h
src/gate/simulator2/: simulator.cpp  simulator.h
src/gate/solver/: solver.h
src/gate/symexec/: symexec.cpp  symexec.h
src/gate/synthesizer/: synthesizer.cpp  synthesizer.h  synthesizer_add.cpp  synthesizer_add.h  synthesizer_bit.cpp  synthesizer_bit.h  synthesizer_cmp.cpp  synthesizer_cmp.h  synthesizer_div.cpp  synthesizer_div.h  synthesizer_mul.cpp  synthesizer_mul.h  synthesizer_mux.cpp  synthesizer_mux.h  synthesizer_neg.cpp  (+5 more)
src/rtl/: CMakeLists.txt  README.md
src/shell/: CMakeLists.txt  shell.cpp  shell.h
test/: CMakeLists.txt  test_shell.cpp  test_util.h
test/util/: bounded_set_test.cpp  fm_test.cpp  kitty_utils_test.cpp  npn.h  serializer_test.cpp
(+920 files in other folders)
