add_compile_options(-fno-rtti)
add_library(Gate OBJECT
  analyzer/probabilistic_estimate.cpp
  analyzer/simulation_estimator.cpp
  analyzer/switching_activity.cpp
  debugger/base_checker.cpp
  debugger/bdd_checker.cpp
  debugger/fraig_checker.cpp
  debugger/rnd_checker.cpp
  debugger/seq_checker.cpp
  estimator/simple_time_model.cpp
  model/cell.cpp
  model/celltype.cpp
  model/decomposer/net_decomposer.cpp
  model/design.cpp
  model/generator/generator.cpp
  model/generator/layer_generator.cpp
  model/generator/matrix_generator.cpp
  model/link.cpp
  model/net.cpp
  model/printer/printer.cpp
  model/serializer.cpp
  model/subnet.cpp
  model/utils/bdd_dnf.cpp
  model/utils/subnet_checking.cpp
  model/utils/subnet_to_bdd.cpp
  model/utils/subnet_truth_table.cpp
  mutator/mutator.cpp
  mutator/mutator_transformer.cpp
  library/library.cpp
  library/check_lib/aig/check_lib_for_aig.cpp
  optimizer/area_resynthesizer.cpp
  optimizer/associative_balancer.cpp
  optimizer/cone_builder.cpp
  optimizer/criterion/criterion.cpp
  optimizer/cut_extractor.cpp
  optimizer/mffc.cpp
  optimizer/npn.cpp
  optimizer/npndb.cpp
  optimizer/npnstatdb.cpp
  optimizer/reconvergence_cut.cpp
  optimizer/refactor.cpp
  optimizer/resubstitutor.cpp
  optimizer/rewriter.cpp
  optimizer/safe_passer.cpp
  optimizer/subnet_basis.cpp
  optimizer/synthesis/abc/rwrUtil.c
  optimizer/synthesis/abc_npn4.cpp
  optimizer/synthesis/akers.cpp
  optimizer/synthesis/algebraic_factor.cpp
  optimizer/synthesis/bidecomposition.cpp
  optimizer/synthesis/cascade.cpp
  optimizer/synthesis/de_micheli.cpp
  optimizer/synthesis/dsd_to_subnet.cpp
  optimizer/synthesis/isop.cpp
  optimizer/synthesis/reed_muller.cpp
  optimizer/synthesis/ternary_bi_clique.cpp
  optimizer/synthesis/unitized_table.cpp
  optimizer/synthesis/zhegalkin.cpp
  parser/graphml_parser.cpp
  premapper/aigmapper.cpp
  simulator/simulator.cpp
  synthesizer/synthesizer.cpp
  synthesizer/synthesizer_add.cpp
  synthesizer/synthesizer_bit.cpp
  synthesizer/synthesizer_cmp.cpp
  synthesizer/synthesizer_div.cpp
  synthesizer/synthesizer_mul.cpp
  synthesizer/synthesizer_mux.cpp
  synthesizer/synthesizer_neg.cpp
  synthesizer/synthesizer_red.cpp
  techmapper/assembly.cpp
  techmapper/comb_mapper/func_mapper/func_mapper.cpp
  techmapper/comb_mapper/func_mapper/area_recovery/area_recovery.cpp
  techmapper/comb_mapper/func_mapper/power_map/power_map.cpp
  techmapper/comb_mapper/func_mapper/simple_area/simple_area_mapper.cpp
  techmapper/comb_mapper/func_mapper/simple_delay/simple_delay_mapper.cpp
  techmapper/seq_mapper/sequential_mapper.cpp
  techmapper/subnet_techmapper.cpp
  techmapper/techmapper.cpp
  techmapper/techmapper_wrapper.cpp
  translator/fir/fir_model2.cpp
  translator/verilog/verilog_model2.cpp
  translator/firrtl.cpp
  translator/yosys_converter_firrtl.cpp
  translator/model2.cpp
  translator/yosys_converter_model2.cpp)
add_library(Utopia::Gate ALIAS Gate)

target_include_directories(Gate
  PUBLIC
  ${PROJECT_SOURCE_DIR}/src
  ${PROJECT_SOURCE_DIR}/lib
  ${STACCATO_INCLUDE_DIRS}
  ${CMAKE_SOURCE_DIR}/lib/bill/lib/cudd
  ${CMAKE_SOURCE_DIR}/lib/bill/lib/cudd/cudd
  ${CMAKE_SOURCE_DIR}/lib/bill/lib/cudd/st
  ${CMAKE_SOURCE_DIR}/lib/bill/lib/cudd/mtr
  ${CMAKE_SOURCE_DIR}/lib/bill/lib/cudd/epd
  ${CMAKE_SOURCE_DIR}/lib/bill/lib/cudd/util
)

target_link_libraries(Gate
  PUBLIC
  ${STACCATO_LIBRARIES}
  MLIRIR
  MLIRSupport
  CIRCTFIRRTL
  CIRCTExportChiselInterface
  CIRCTFIRRTLTransforms
  CIRCTImportFIRFile
  CIRCTTransforms
  MLIRParser
  MLIRRewrite
  MLIRTransformUtils
  MLIRTransforms
  minisat-lib-static
  Cudd::Cudd
  lorina
  readcells
  sqlite3
  CTemplate::nothreads
  Kitty
  Mockturtle
  parallel_hashmap
  Json

  PRIVATE

  Utopia::Util
  CLI
  Yosys::Yosys
  tinyxml2
)
