add_compile_options(-fno-rtti)
add_library(Gate OBJECT
  analyzer/probabilistic_estimate.cpp
  analyzer/simulation_estimator.cpp
  analyzer/switching_activity.cpp
  criterion/cost_function.cpp
  debugger/base_checker.cpp
  debugger/bdd_checker.cpp
  debugger/fraig_checker.cpp
  debugger/rnd_checker.cpp
  debugger/seq_checker.cpp
  debugger/verifier.cpp
  estimator/cost_estimator.cpp
  estimator/simple_time_model.cpp
  model/cell.cpp
  model/cellattr.cpp
  model/celltype.cpp
  model/decomposer/net_decomposer.cpp
  model/design.cpp
  model/generator/generator.cpp
  model/generator/layer_generator.cpp
  model/generator/matrix_generator.cpp
  model/link.cpp
  model/net.cpp
  model/printer/dataflow_printer.cpp
  model/printer/net_printer.cpp
  model/printer/net_printer_base.cpp
  model/printer/net_printer_verilog.cpp
  model/printer/net_printer_verilog_lib.cpp
  model/serializer.cpp
  model/subnet.cpp
  model/subnetview.cpp
  model/utils/bdd_dnf.cpp
  model/utils/subnet_checking.cpp
  model/utils/subnet_to_bdd.cpp
  model/utils/subnet_truth_table.cpp
  model/validator.cpp
  mutator/mutator.cpp
  mutator/mutator_transformer.cpp
  library/library.cpp
  library/readcells_iface.cpp
  optimizer/balancer.cpp
  optimizer/cut_extractor.cpp
  optimizer/conflict_graph.cpp
  optimizer/lazy_refactorer.cpp
  optimizer/mffc.cpp
  optimizer/npn.cpp
  optimizer/npndb.cpp
  optimizer/get_dbstat.cpp
  optimizer/npnstatdb.cpp
  optimizer/reconvergence.cpp
  optimizer/refactorer.cpp
  optimizer/resubstitutor.cpp
  optimizer/rewriter.cpp
  optimizer/safe_passer.cpp
  optimizer/subnet_basis.cpp
  optimizer/synthesis/abc_npn4.cpp
  optimizer/synthesis/akers.cpp
  optimizer/synthesis/algebraic_factor.cpp
  optimizer/synthesis/associative_reordering.cpp
  optimizer/synthesis/bidecomposition.cpp
  optimizer/synthesis/cascade.cpp
  optimizer/synthesis/de_micheli.cpp
  optimizer/synthesis/dsd_to_subnet.cpp
  optimizer/synthesis/isop.cpp
  optimizer/synthesis/reed_muller.cpp
  optimizer/synthesis/ternary_bi_clique.cpp
  optimizer/synthesis/unitized_table.cpp
  optimizer/synthesis/zhegalkin.cpp
  premapper/cell_aigmapper.cpp
  premapper/cell_migmapper.cpp
  premapper/cell_premapper.cpp
  premapper/cell_xagmapper.cpp
  premapper/cell_xmgmapper.cpp
  premapper/cone_premapper.cpp
  simulator/simulator.cpp
  synthesizer/synthesizer.cpp
  synthesizer/operation/addition.cpp
  synthesizer/operation/bitwise.cpp
  synthesizer/operation/comparison.cpp
  synthesizer/operation/division.cpp
  synthesizer/operation/multiplexer.cpp
  synthesizer/operation/multiplication.cpp
  synthesizer/operation/negation.cpp
  synthesizer/operation/reduction.cpp
  synthesizer/operation/shift.cpp
  techmapper/matcher/pbool_matcher.cpp
  techmapper/subnet_techmapper_base.cpp
  techmapper/subnet_techmapper_pcut.cpp
  techmapper/techmapper_wrapper.cpp
  translator/firrtl/firrtl_net.cpp
  translator/firrtl/firrtl_net_utils.cpp
  translator/firrtl.cpp
  translator/graphml.cpp
  translator/model2.cpp
  translator/verilog/verilog_firrtl.cpp
  translator/yosys_converter_firrtl.cpp
  translator/yosys_converter_model2.cpp)
add_library(Utopia::Gate ALIAS Gate)

target_include_directories(Gate
  PUBLIC
    ${PROJECT_SOURCE_DIR}/src
    ${PROJECT_SOURCE_DIR}/lib
    ${STACCATO_INCLUDE_DIRS}
    ${CMAKE_SOURCE_DIR}/lib/bill/lib/cudd
    ${CMAKE_SOURCE_DIR}/lib/bill/lib/cudd/cudd
    ${CMAKE_SOURCE_DIR}/lib/bill/lib/cudd/st
    ${CMAKE_SOURCE_DIR}/lib/bill/lib/cudd/mtr
    ${CMAKE_SOURCE_DIR}/lib/bill/lib/cudd/epd
    ${CMAKE_SOURCE_DIR}/lib/bill/lib/cudd/util
)

target_link_libraries(Gate
  PUBLIC
    ${STACCATO_LIBRARIES}
    MLIRIR
    MLIRSupport
    CIRCTFIRRTL
    CIRCTExportChiselInterface
    CIRCTFIRRTLTransforms
    CIRCTImportFIRFile
    CIRCTTransforms
    MLIRParser
    MLIRRewrite
    MLIRTransformUtils
    MLIRTransforms
    minisat-lib-static
    Cudd::Cudd
    lorina
    readcells
    sqlite3
    CTemplate::nothreads
    Kitty
    Mockturtle
    parallel_hashmap
    Json
  PRIVATE
    Utopia::Diag
    Utopia::Util
    CLI
    fmt
    Yosys::Yosys
    tinyxml2
    easyloggingpp
)
